[gd_scene load_steps=12 format=2]

[ext_resource path="res://tether/player.gd" type="Script" id=1]
[ext_resource path="res://tether/grappling_hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/runner.png" type="Texture" id=3]
[ext_resource path="res://projectile/cannon.gd" type="Script" id=4]
[ext_resource path="res://projectile/bullet.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 4 )

[sub_resource type="Animation" id=3]
resource_name = "crouch"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="standing_hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="crouching_hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 2 )
disabled = true

[node name="GrapplingHook" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.5, 0 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
playback_speed = 0.5
anims/crouch = SubResource( 3 )
anims/run = SubResource( 4 )
anims/slide = SubResource( 5 )
anims/stand = SubResource( 6 )

[node name="Cannon" type="Node2D" parent="."]
script = ExtResource( 4 )
bullet_scene = ExtResource( 5 )
emitter_position = Vector2( 3, -1 )
bullet_speed = 70.0

